Cambios en el diseño de la navbar

--- a/src/assets/css/FormularioImagen.css
+++ b/src/assets/css/FormularioImagen.css
@@ -3,5 +3,9 @@
 }
 
 .custom-file-label::after{
-    content: "buscar" !important;
+    content: "Buscar" !important;
+}
+
+.btn-purple{
+    background-color: mediumpurple;
 }
